--- a/src/app/user-page/links/links.component.html
+++ b/src/app/user-page/links/links.component.html
@@ -1,16 +1,28 @@
-<form (ngSubmit)="newLink()">
-  <div class="form-group">
-    <label for="label-input"> Label for Link </label>
-    <input class="form-control" type="text" name="label" id="label-input" [(ngModel)]="label" placeholder="Google">
-  </div>
-  <div class="form-group">
-    <label for="link-input"> Link Url</label>
-    <input class="form-control" type="text" name="link" id="link-input" [(ngModel)]="url" placeholder="https://www.google.com">
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-4">
+
+    <form (ngSubmit)="newLink()">
+      <div class="form-group">
+        <label for="label-input"> Label for Link </label>
+        <input class="form-control" type="text" name="label" id="label-input" [(ngModel)]="label" placeholder="Google">
+      </div>
+      <div class="form-group">
+        <label for="link-input"> Link Url</label>
+        <input class="form-control" type="text" name="link" id="link-input" [(ngModel)]="url" placeholder="https://www.google.com">
+      </div>
+
+      <button class="button form-control btn-default"> Add a link </button>
+    </form>
+
+    <div class="row link-container">
+      <div class="col-xs-6" *ngFor="let link of links">
+        <a [href]="link.url" target="_blank"><button class="button link-btn btn-default btn-lg">{{link.name}}</button></a>
+      </div>
+    </div>
+
+    </div>
   </div>
 
-  <button class="button"> Add a link </button>
-</form>
-
-<div *ngFor="let link of links">
-  <a [href]="link.url" target="_blank">{{link.name}}</a>
 </div>
